# carla-autoware-bridge

./: README.md
carla_autoware_bridge/: CMakeLists.txt  package.xml
carla_autoware_bridge/launch/: carla_autoware_bridge.launch.xml  dummy_perception.launch.xml
carla_autoware_bridge/src/: carla_autoware_bridge.cpp
